--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "private": true,
   "repository": "screepers/screeps-typescript-starter",
   "scripts": {
-    "deploy": "webpack --colors --env.ENV=dev",
     "lint": "tslint \"src/**/*.ts\" -e \"**/src/lib/**/*.ts\"",
     "lint-webpack": "tslint \"config/**/*.ts\" \"webpack.config.ts\" \"libs/**/*.ts\"",
     "local": "webpack --colors --env.ENV=local",
@@ -13,6 +12,8 @@
     "start": "webpack --colors --watch",
     "test": "echo \"Error: no test specified\" && exit 1",
     "typings": "typings",
+    "watch": "webpack --colors --watch",
+    "watch-dev": "webpack --colors --watch --env.ENV=dev",
     "watch-local": "webpack --colors --watch --env.ENV=local"
   },
   "author": "",
